more scrollbar issues

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 93.2vh;
+  min-height: 88.25vh;
   display: flex;
   flex-direction: column;
   align-items: center;
